--- a/nrgrouper.conf.sample
+++ b/nrgrouper.conf.sample
@@ -12,6 +12,7 @@ http_proxy_type = http
 debug = True
 
 [Insights]
+enabled=True
 account_id = [your account_id  (found in the URL for Insights)]
 api_key = [your Insights API key]
 url = https://insights-collector.newrelic.com/v1/accounts/{account_id}/events
